# WordConverter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Converter.cpp  Converter.h  FileManager.cpp  FileManager.h  LogManager.cpp  LogManager.h  Manager.cpp  Manager.h  ProgramManager.cpp  ProgramManager.h  Singleton.h  WordConverter.cpp
tests/: CMakeLists.txt  MainAllTests.cpp  TestConverter.cpp
